--- a/index.html
+++ b/index.html
@@ -3,35 +3,17 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Maycon Barboza — Psicólogo, Psicanalista Sexólogo & Educador</title>
+<title>Maycon Barboza — Psicólogo, Psicanalista & Educador</title>
 <meta name="description" content="Maycon Barboza — atendimento clínico desde 2016, com foco em vínculos, transtornos de humor e sexualidade.">
 <style>
 :root{
-/* BOTÃO INSTAGRAM — VISUAL PREMIUM */
-.instagram-btn{
-background:#1F5B7A; /* azul psicológico */
-color:#ffffff;
-font-weight:600;
-padding:14px 28px;
-border-radius:10px;
-display:inline-block;
-text-decoration:none;
-font-size:1.05rem;
-letter-spacing:0.3px;
-margin-top:22px;
-box-shadow:0 6px 14px rgba(0,0,0,0.10);
-transition:.25s ease;
-}
-.instagram-btn:hover{
-background:#14445b;
-transform:translateY(-2px);
-box-shadow:0 10px 20px rgba(0,0,0,.18);
-}
-.instagram-btn i{
-margin-right:10px;
-font-style:normal;
-}
-
+--bg:#f6f2ec;
+--card:#ffffff;
+--primary:#1F5B7A;
+--muted:#3f3b38;
+--radius:12px;
+--maxw:1120px;
+--serif:"Georgia","Times New Roman",serif;
 }
 *{box-sizing:border-box}
 html{font-size:19px}
@@ -164,7 +146,7 @@ object-position:center center;
 Psicólogo, Psicanalista, Sexólogo e Educador — Saúde Mental integrativa com foco em vínculos, transtornos de humor e sexualidade.
 </div>
 <div class="meta">
-CRP 01/21617 · Atendimento online· +14.000 atendimentos
+CRP 01/21617 · Atendimento presencial e online · +14.000 atendimentos
 </div>
 </div>
 <img id="heroImg" class="hero-photo" src="" alt="Foto de Maycon Barboza">
@@ -183,7 +165,6 @@ target="_blank"
 class="instagram-btn">
 <i>📎</i> Ver Instagram do Maycon
 </a>
-
 </section>
 
 <!-- COMO TRABALHA + FOTO LATERAL -->
@@ -206,7 +187,7 @@ O objetivo não é apenas aliviar sintomas, mas favorecer mudanças estruturais:
 <!-- MODALIDADES DE ATENDIMENTO -->
 <section class="section">
 <h2>Modalidades de atendimento</h2>
-<p class="muted">Conheça as principais formas de cuidado disponíveis. Para consultar valores converse com a assistente Yara no canto inferior da tela.</p>
+<p class="muted">Conheça as principais formas de cuidado disponíveis.Para saber valores, converse com a assistente Yara no canto inferior da tela</p>
 
 <div class="services">
 <details class="service">
@@ -311,17 +292,8 @@ Se preferir, você pode salvar o arquivo no seu dispositivo para ler com mais ca
 
 </div>
 
-<footer style="text-align:center;margin-top:34px">
-<a id="privacyOpen" style="text-decoration:underline;cursor:pointer;margin-right:12px">
-Política de privacidade
-</a>
-
-<a href="https://instagram.com/terapeutamaycon"
-target="_blank"
-class="instagram-btn"
-style="margin-left:10px;">
-<i>📎</i> Instagram
-</a>
+<footer>
+<a id="privacyOpen" style="text-decoration:underline;cursor:pointer">Política de privacidade</a> · @terapeutamaycon
 </footer>
 </div>
 
@@ -398,6 +370,8 @@ document.addEventListener('keydown', e=>{if(e.key==='Escape') hideModal();});
 </script>
 </body>
 </html>
+
+
 
 
 
