--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ Desde 2016, realizou mais de 14 mil atendimentos em diferentes contextos, acolhe
 </p><a href="https://instagram.com/terapeutamaycon"
 target="_blank"
 class="instagram-btn">
-<i>📎</i> Ver Instagram do Maycon
+<i> </i> Ver Instagram do Maycon
 </a>
 </section>
 
@@ -172,7 +172,7 @@ class="instagram-btn">
 <div>
 <h2>Como trabalha</h2>
 <p class="muted">
-O trabalho clínico de Maycon é sustentado por uma escuta psicanalítica profunda, aliada a uma postura ética e realista. Cada paciente é recebido como alguém único — com história, tempo e limites próprios — e não como um “caso” a ser encaixado em rótulos prontos.
+O trabalho clínico de Maycon é sustentado por uma escuta psicanalítica profunda, aliada a uma postura ética e realista. Cada paciente é recebido como alguém único, com história, tempo e limites próprios, e não como um “caso” a ser encaixado em rótulos prontos.
 </p>
 <p class="muted">
 Quando necessário, integra recursos como hipnoterapia, intervenções breves, orientação psicoeducativa e supervisão de rede de apoio, sempre avaliando o que faz sentido para aquela pessoa naquele momento. As principais demandas atendidas envolvem vínculos afetivos, solidão, transtornos de humor, lutos, sexualidade, conflitos familiares, questões de identidade e sofrimento relacionado ao trabalho.
@@ -272,7 +272,7 @@ Visão geral da formação livre em Psicanálise Clínica (39 meses — Institut
 </p>
 <div class="ebook-actions">
 <a class="ebook-link-btn" href="ebook.pdf" target="_blank" rel="noopener">
-📄 Abrir e-book (tela cheia)
+ Abrir e-book (tela cheia)
 </a>
 </div>
 <div class="ebook-note">
@@ -370,6 +370,10 @@ document.addEventListener('keydown', e=>{if(e.key==='Escape') hideModal();});
 </script>
 </body>
 </html>
+
+
+
+
 
 
 
