--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ O objetivo não é apenas aliviar sintomas, mas favorecer mudanças estruturais:
 <!-- MODALIDADES DE ATENDIMENTO -->
 <section class="section">
 <h2>Modalidades de atendimento</h2>
-<p class="muted">Conheça as principais formas de cuidado disponíveis.Para saber valores, converse com a assistente Yara no canto inferior da tela</p>
+<p class="muted">Conheça as principais formas de cuidado disponíveis. Para saber valores, converse com a Assistente Yara no canto inferior da tela</p>
 
 <div class="services">
 <details class="service">
@@ -370,6 +370,7 @@ document.addEventListener('keydown', e=>{if(e.key==='Escape') hideModal();});
 </script>
 </body>
 </html>
+
 
 
 
