--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Maycon Barboza — Psicólogo, Psicanalista & Educador</title>
+<title>Maycon Barboza — Psicólogo, Psicanalista, Sexólogo & Educador</title>
 <meta name="description" content="Maycon Barboza — atendimento clínico desde 2016, com foco em vínculos, transtornos de humor e sexualidade.">
 <style>
 :root{
@@ -370,6 +370,7 @@ document.addEventListener('keydown', e=>{if(e.key==='Escape') hideModal();});
 </script>
 </body>
 </html>
+
 
 
 
