--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ object-position:center center;
 Psicólogo, Psicanalista, Sexólogo e Educador — Saúde Mental integrativa com foco em vínculos, transtornos de humor e sexualidade.
 </div>
 <div class="meta">
-CRP 01/21617 · Atendimento presencial e online · +14.000 atendimentos
+CRP 01/21617 · Atendimento online · +14.000 atendimentos
 </div>
 </div>
 <img id="heroImg" class="hero-photo" src="" alt="Foto de Maycon Barboza">
@@ -370,6 +370,7 @@ document.addEventListener('keydown', e=>{if(e.key==='Escape') hideModal();});
 </script>
 </body>
 </html>
+
 
 
 
