--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ CRP 01/21617 · Atendimento online · +14.000 atendimentos
 
 <!-- QUEM É -->
 <section class="section">
-<h2>Quem é Maycon</h2>
+<h2>Quem é Maycon Barboza</h2>
 <p class="muted">
 <strong>Brasiliense, pai, determinado e sonhador.</strong> Formado em Psicologia pelo IESB, Maycon construiu sua trajetória combinando estudo intenso, experiência clínica e envolvimento constante com a formação de novos profissionais. Especialista em psicanálise clínica, sexualidade humana, transtornos de humor e transtorno bipolar, atua também com hipnoterapia e outras abordagens integrativas.
 </p>
@@ -163,7 +163,7 @@ Desde 2016, realizou mais de 14 mil atendimentos em diferentes contextos, acolhe
 </p><a href="https://instagram.com/terapeutamaycon"
 target="_blank"
 class="instagram-btn">
-<i> </i> Ver Instagram do Maycon
+<i> </i> Ver Instagram do Maycon Barboza
 </a>
 </section>
 
@@ -172,7 +172,7 @@ class="instagram-btn">
 <div>
 <h2>Como trabalha</h2>
 <p class="muted">
-O trabalho clínico de Maycon é sustentado por uma escuta psicanalítica profunda, aliada a uma postura ética e realista. Cada paciente é recebido como alguém único, com história, tempo e limites próprios, e não como um “caso” a ser encaixado em rótulos prontos.
+O trabalho clínico de Maycon Barboza é sustentado por uma escuta psicanalítica profunda, aliada a uma postura ética e realista. Cada paciente é recebido como alguém único, com história, tempo e limites próprios, e não como um “caso” a ser encaixado em rótulos prontos.
 </p>
 <p class="muted">
 Quando necessário, integra recursos como hipnoterapia, intervenções breves, orientação psicoeducativa e supervisão de rede de apoio, sempre avaliando o que faz sentido para aquela pessoa naquele momento. As principais demandas atendidas envolvem vínculos afetivos, solidão, transtornos de humor, lutos, sexualidade, conflitos familiares, questões de identidade e sofrimento relacionado ao trabalho.
@@ -257,9 +257,11 @@ O objetivo não é apenas aliviar sintomas, mas favorecer mudanças estruturais:
 </details>
 
 <details class="service">
-<summary>Assinaturas de acompanhamento</summary>
-<p>Modelo em que o paciente contrata um pacote mensal de sessões, facilitando a continuidade do processo terapêutico e a organização financeira.</p>
-<p>Funciona de forma semelhante a uma assinatura de serviço: as condições são combinadas previamente em contrato e revisadas conforme a necessidade clínica.</p>
+<summary>Formação em Psicanálise Clínica</summary>
+<p> A formação livre em psicanálise clínica é indicada
+ para quem quer aprender sobre psicanálise, seja
+ para atuar como psicanalista futuramente,
+ pesquisar ou aprimorar a sua prática profissional.</p>
 </details>
 </div>
 </section>
@@ -370,6 +372,7 @@ document.addEventListener('keydown', e=>{if(e.key==='Escape') hideModal();});
 </script>
 </body>
 </html>
+
 
 
 
