--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Maycon Barboza — Psicólogo, Psicanalista, Sexólogo & Educador</title>
-<meta name="description" content="Maycon Barboza — atendimento clínico desde 2016, com foco em vínculos, transtornos de humor e sexualidade.">
+<title>Psicólogo em Brasília - Maycon Barboza — Psicólogo, Psicanalista, Sexólogo & Educador</title>
+<meta name="description" content="Psicólogo e Psicanalísta em Brasília. Atendimento online com foco em vínculos, transtornos de humor sexualidade e saúde mental. Conheça o trabalho de Maycon Barboza">
 <style>
 :root{
 --bg:#f6f2ec;
@@ -141,7 +141,7 @@ object-position:center center;
 <!-- HERO -->
 <header class="hero">
 <div>
-<h1>Maycon Barboza</h1>
+<h1>Psicólogo e Psicanalísta Maycon Barboza</h1>
 <div class="lead">
 Psicólogo, Psicanalista, Sexólogo e Educador — Saúde Mental integrativa com foco em vínculos, transtornos de humor e sexualidade.
 </div>
@@ -372,6 +372,7 @@ document.addEventListener('keydown', e=>{if(e.key==='Escape') hideModal();});
 </script>
 </body>
 </html>
+
 
 
 
