--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ font-family:var(--serif);line-height:1.62;-webkit-font-smoothing:antialiased;
 .hero{
 display:grid;grid-template-columns:1fr 1fr;gap:22px;align-items:center;
 }
-.hero h1{margin:0;font-size:2.1rem;color:var(--primary)}
+.hero h1{text-align:center;width:100%}
 .lead{margin-top:10px;font-size:1.02rem}
 .meta{margin-top:12px;font-size:0.98rem}
 
@@ -372,6 +372,7 @@ document.addEventListener('keydown', e=>{if(e.key==='Escape') hideModal();});
 </script>
 </body>
 </html>
+
 
 
 
