--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ AJUSTE — TÍTULO CENTRALIZADO
 ======================== */
 .hero h1{
 text-align:center;
-color:var(--primary);
+color:var(--primary); /* mantém o azul original */
 }
 
 .lead,
@@ -384,6 +384,7 @@ document.addEventListener('keydown', e=>{if(e.key==='Escape') hideModal();});
 </script>
 </body>
 </html>
+
 
 
 
