--- a/index.html
+++ b/index.html
@@ -26,30 +26,40 @@ font-family:var(--serif);line-height:1.62;-webkit-font-smoothing:antialiased;
 
 /* HERO -------------------------------------------------- */
 .hero{
-display:grid;grid-template-columns:1fr 1fr;gap:22px;align-items:center;
+display:grid;
+grid-template-columns:1fr 1fr;
+gap:22px;
+align-items:center;
 }
-.hero h1{text-align:center;width:100%}
-.lead{margin-top:10px;font-size:1.02rem}
-.meta{margin-top:12px;font-size:0.98rem}
 
-.hero-photo{/* ========================
-AJUSTE — TÍTULO CENTRALIZADO
-======================== */
 .hero h1{
-text-align:center;
-color:var(--primary); /* mantém o azul original */
+margin:0;
+font-size:2.1rem;
+color:var(--primary); /* AZUL */
+text-align:center; /* CENTRALIZADO */
 }
 
-.lead,
-.meta,
-.social-links{
+.lead{
+margin-top:10px;
+font-size:1.02rem;
 text-align:center;
 }
-width:100%;height:60vh;max-height:640px;border-radius:12px;
-object-fit:cover;object-position:center top;
+
+.meta{
+margin-top:12px;
+font-size:0.98rem;
+text-align:center;
+}
+
+.hero-photo{
+width:100%;
+height:60vh;
+max-height:640px;
+border-radius:12px;
+object-fit:cover;
+object-position:center top;
 box-shadow:0 12px 30px rgba(0,0,0,0.08);
 }
-
 /* SEÇÕES ------------------------------------------------ */
 .section{margin-top:18px}
 h2{color:var(--primary);margin:0 0 8px;font-size:1.12rem}
@@ -384,6 +394,7 @@ document.addEventListener('keydown', e=>{if(e.key==='Escape') hideModal();});
 </script>
 </body>
 </html>
+
 
 
 
