--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ object-position:center center;
 <!-- HERO -->
 <header class="hero">
 <div>
-<h1>Psicólogo e Psicanalísta Maycon Barboza</h1>
+<h1>Psicólogo e Psicanalista Maycon Barboza</h1>
 <div class="lead">
 Psicólogo, Psicanalista, Sexólogo e Educador — Saúde Mental integrativa com foco em vínculos, transtornos de humor e sexualidade.
 </div>
@@ -394,6 +394,7 @@ document.addEventListener('keydown', e=>{if(e.key==='Escape') hideModal();});
 </script>
 </body>
 </html>
+
 
 
 
