--- a/index.html
+++ b/index.html
@@ -410,14 +410,15 @@ closeBtn.addEventListener('click', hideModal);
 backdrop.addEventListener('click', hideModal);
 document.addEventListener('keydown', e=>{if(e.key==='Escape') hideModal();});
 </script><!-- Balão de indicação do chat no mobile -->
-<div class="iara-hint">
-💬 Fale com a Iara
+<div class="yara-hint">
+💬 Fale com a Yara
 </div>
 
 </body>
 </html>
 </body>
 </html>
+
 
 
 
