--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@ closeBtn.addEventListener('click', hideModal);
 backdrop.addEventListener('click', hideModal);
 document.addEventListener('keydown', e=>{if(e.key==='Escape') hideModal();});
 </script><!-- Balão de indicação do chat no mobile -->
-<div class="yara-hint">
+<div class="iara-hint">
 💬 Fale com a Yara
 </div>
 
@@ -418,6 +418,7 @@ document.addEventListener('keydown', e=>{if(e.key==='Escape') hideModal();});
 </html>
 </body>
 </html>
+
 
 
 
