--- a/index.html
+++ b/index.html
@@ -347,8 +347,6 @@ Visão geral da formação livre em Psicanálise Clínica (39 meses — Institut
 <div class="ebook-note">
 Se preferir, você pode salvar o arquivo no seu dispositivo para ler com mais calma.
 </div>
-</section>
- <!-- ANALISTA REATIVO -->
 <section class="section">
 <h2>Analista Reativo — apoio entre sessões</h2>
 
@@ -357,17 +355,30 @@ Se preferir, você pode salvar o arquivo no seu dispositivo para ler com mais ca
 
 <div>
 <p class="muted">
-O <strong>Analista Reativo</strong> é um recurso complementar entre sessões.
-Ele reage ao que você compartilha, provoca reflexão, ajuda a organizar o interno
-e mantém o processo ativo no intervalo entre um encontro e outro.
+O <strong>Analista Reativo</strong> É um recurso baseado em Inteligência Artificial
+treinado com o estilo clínico, a escuta e a forma de levantar reflexões do Maycon.
+Ele existe para te acompanhar entre uma sessão e outra.
 </p>
 
 <p class="muted">
-Não substitui terapia — ele dá continuidade mental, alivia a ansiedade,
-amplia percepção e permite que o pensamento siga trabalhando.
+Você escreve. Ele responde.
+Não com frases prontas, mas com perguntas, devolutivas e provocações internas,
+como um espaço de continência quando algo acontece e o próximo encontro ainda não chegou.
 </p>
 
-<p class="muted"><strong>Acesso exclusivo para pacientes.</strong></p>
+<p class="muted">
+É útil quando surge uma angústia no meio da semana, um pensamento que não te larga,
+um conflito que precisa ser elaborado ou uma questão que você deseja refletir antes da sessão.
+</p>
+
+<p class="muted">
+<strong>Não é terapia e não substitui o processo clínico.</strong><br>
+É IA. Uuma extensão do trabalho, um apoio psíquico para manter o pensamento vivo.
+</p>
+
+<p class="muted" style="margin-top:10px;">
+Acesso Exclusivo para Pacientes.
+</p>
 </div>
 </div>
 </section>
@@ -468,6 +479,7 @@ document.addEventListener('keydown', e=>{if(e.key==='Escape') hideModal();});
 </html>
 </body>
 </html>
+
 
 
 
