--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@ Se preferir, você pode salvar o arquivo no seu dispositivo para ler com mais ca
 <div>
 <p class="muted">
 O <strong>Analista Reativo</strong> É um recurso baseado em Inteligência Artificial
-treinado com o estilo clínico, a escuta e a forma de levantar reflexões do Maycon.
+treinado com o estilo clínico, a escuta e a forma de levantar reflexões do Maycon Barboza.
 Ele existe para te acompanhar entre uma sessão e outra.
 </p>
 
@@ -479,6 +479,7 @@ document.addEventListener('keydown', e=>{if(e.key==='Escape') hideModal();});
 </html>
 </body>
 </html>
+
 
 
 
