--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@ um conflito que precisa ser elaborado ou uma questão que você deseja refletir 
 </p>
 
 <p class="muted" style="margin-top:10px;">
-Acesso Exclusivo para Pacientes.
+<strong>Acesso Exclusivo Para Pacientes.</strong>
 </p>
 </div>
 </div>
@@ -479,6 +479,7 @@ document.addEventListener('keydown', e=>{if(e.key==='Escape') hideModal();});
 </html>
 </body>
 </html>
+
 
 
 
