--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@ um conflito que precisa ser elaborado ou uma questão que você deseja refletir 
 
 <p class="muted">
 <strong>Não é terapia e não substitui o processo clínico.</strong><br>
-É IA. Uuma extensão do trabalho, um apoio psíquico para manter o pensamento vivo.
+É IA. Uma extensão do trabalho, um apoio psíquico para manter o pensamento vivo.
 </p>
 
 <p class="muted" style="margin-top:10px;">
@@ -479,6 +479,7 @@ document.addEventListener('keydown', e=>{if(e.key==='Escape') hideModal();});
 </html>
 </body>
 </html>
+
 
 
 
