--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@ Visão geral da formação livre em Psicanálise Clínica (39 meses — Institut
 Se preferir, você pode salvar o arquivo no seu dispositivo para ler com mais calma.
 </div>
 <section class="section">
-<h2>Analista Reativo — apoio entre sessões</h2>
+<h2>Analista Reativo — Apoio entre sessões</h2>
 
 <div class="ar-box">
 <img src="analista-reativo.jpg" class="ar-img" alt="Representação reflexiva do Analista Reativo">
@@ -479,6 +479,7 @@ document.addEventListener('keydown', e=>{if(e.key==='Escape') hideModal();});
 </html>
 </body>
 </html>
+
 
 
 
