--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ class="instagram-btn">
 <!-- COMO TRABALHA + FOTO LATERAL -->
 <section class="section two-col">
 <div>
-<h2>Como trabalha</h2>
+<h2>Como Trabalha</h2>
 <p class="muted">
 O trabalho clínico de Maycon Barboza é sustentado por uma escuta psicanalítica profunda, aliada a uma postura ética e realista. Cada paciente é recebido como alguém único, com história, tempo e limites próprios, e não como um “caso” a ser encaixado em rótulos prontos.
 </p>
@@ -479,6 +479,7 @@ document.addEventListener('keydown', e=>{if(e.key==='Escape') hideModal();});
 </html>
 </body>
 </html>
+
 
 
 
