--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ O objetivo não é apenas aliviar sintomas, mas favorecer mudanças estruturais:
 
 <!-- MODALIDADES DE ATENDIMENTO -->
 <section class="section">
-<h2>Modalidades de atendimento</h2>
+<h2>Modalidades de Atendimento</h2>
 <p class="muted">Conheça as principais formas de cuidado disponíveis. Para saber valores, converse com a Assistente Yara no canto inferior da tela</p>
 
 <div class="services">
@@ -479,6 +479,7 @@ document.addEventListener('keydown', e=>{if(e.key==='Escape') hideModal();});
 </html>
 </body>
 </html>
+
 
 
 
