--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 
 </head>
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+
+<link rel="stylesheet" href="style.css"> <!-- ESTA LINHA É A CHAVE -->
+
+<title>Psicólogo em Brasília - Maycon Barboza</title>
+<meta name="description" content="Psicólogo, Psicanalista, Sexólogo e Educador. Atendimento online.">
+</head>
 <body>
 <div class="wrap">
 <div class="card">
@@ -306,5 +315,6 @@ if (e.key === "Escape") hideModal();
 </script>
 </body>
 </html>
+
 
 
