--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
-
-</head>
+<!doctype html>
+<html lang="pt-BR">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
+<meta charset="utf-8" />
+<meta name="google-site-verification" content="HwJ9dwezqWNKr0JNHqxHIqp6dp31o00n9FeJolD2W8k" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
 
-<link rel="stylesheet" href="style.css"> <!-- ESTA LINHA É A CHAVE -->
+<title>Psicólogo em Brasília - Maycon Barboza — Psicólogo, Psicanalista, Sexólogo & Educador</title>
+<meta name="description" content="Psicólogo e Psicanalísta em Brasília. Atendimento online com foco em vínculos, transtornos de humor, sexualidade e saúde mental. Conheça o trabalho de Maycon Barboza.">
 
-<title>Psicólogo em Brasília - Maycon Barboza</title>
-<meta name="description" content="Psicólogo, Psicanalista, Sexólogo e Educador. Atendimento online.">
+<!-- AQUI em vez do <style> entra só o link -->
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div class="wrap">
@@ -315,6 +317,7 @@ if (e.key === "Escape") hideModal();
 </script>
 </body>
 </html>
+
 
 
 
