--- a/index.html
+++ b/index.html
@@ -34,6 +34,15 @@ Psicólogo, Psicanalista, Sexólogo e Educador — Saúde Mental integrativa com
 <div class="meta">
 CRP 01/21617 · Atendimento online · +14.000 atendimentos
 </div>
+<header class="hero">
+<div>
+<h1>Psicólogo e Psicanalista Maycon Barboza</h1>
+<div class="lead">
+Psicólogo, Psicanalista, Sexólogo e Educador — Saúde Mental integrativa com foco em vínculos, transtornos de humor e sexualidade.
+</div>
+<div class="meta">
+CRP 01/21617 · Atendimento online · +14.000 atendimentos
+</div>
 
 <div class="hero-cta">
 <a
@@ -49,10 +58,7 @@ Agende sua sessão no WhatsApp
 </div>
 <img id="heroImg" class="hero-photo" src="" alt="Foto de Maycon Barboza">
 </header>
-</div>
-<img id="heroImg" class="hero-photo" src="" alt="Foto de Maycon Barboza">
-</header>
-
+<div 
 <!-- QUEM É -->
 <section class="section">
 <h2>Quem é Maycon Barboza</h2>
@@ -341,6 +347,7 @@ if (e.key === "Escape") hideModal();
 </script>
 </body>
 </html>
+
 
 
 
