--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@ Psicólogo, Psicanalista, Sexólogo e Educador — Saúde Mental integrativa com
 </div>
 <div class="meta">
 CRP 01/21617 · Atendimento online · +14.000 atendimentos
+</div><div class="hero-cta">
+<a class="cta-btn" href="https://wa.me/5561991229512" target="_blank" rel="noopener noreferrer">
+Agende sua sessão no WhatsApp
+</a>
 </div>
 </div>
 <img id="heroImg" class="hero-photo" src="" alt="Foto de Maycon Barboza">
@@ -317,6 +321,7 @@ if (e.key === "Escape") hideModal();
 </script>
 </body>
 </html>
+
 
 
 
